--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,5 @@ j2ee.server.domain=C:/Users/RODRIGO/personal_domain
 j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
 j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Users\\RODRIGO\\personal_domain]deployer:gfv3ee6wc:localhost:38099
 j2ee.server.middleware=C:/Program Files/glassfish-4.1
+selected.browser=default
 user.properties.file=C:\\Users\\RODRIGO\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
